# learn_english

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/categories/: models.py  repo.py  router.py  schemas.py
app/images/: router.py
app/levels/: models.py  repo.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 0a28fa6b5334_themes_migration.py  386f9c096f8f_иконка_в_категорию.py  4e3ef73a9531_init_migration.py  544a5f594a1a_themes_migration.py  679f0fca3867_category_migration.py  95a74d9b51d3_theme_migration.py  a2c4330ea725_word_migration.py  d4b5d3b374d7_default_none.py
app/repo/: base.py
app/tables/: models.py
app/themes/: models.py
app/words/: models.py  repo.py  router.py  schemas.py
