[tool.poetry]
name = "learn_inglish"
version = "0.1.0"
authors = ["Alex"]
description = "Project with learning"

[tool.poetry.dependencies]
python = "==3.12.0"
pytest = "==8.3.5"
aiosqlite = "==0.21.0"
alembic  = "==1.15.2"  
annotated-types = "==0.7.0"
anyio = "==4.9.0"
asyncpg = "==0.30.0"
certifi = "==2025.1.31"
click = "==8.1.8"
colorama = "==0.4.6"
dnspython = "==2.7.0"
email_validator = "==2.2.0"
fastapi = "==0.115.12"
fastapi-cli = "==0.0.7"
greenlet = "==3.1.1"
h11 = "==0.14.0"
httpcore = "==1.0.7"
httptools = "==0.6.4"
httpx = "==0.28.1"
idna = "==3.10"
itsdangerous = "==2.2.0"
Jinja2 = "==3.1.6"
Mako = "==1.3.9"
markdown-it-py = "==3.0.0"
MarkupSafe = "==3.0.2"
mdurl = "==0.1.2"
orjson = "==3.10.16"
pip = "==23.2.1"
pydantic = "==2.11.2"
pydantic_core = "==2.33.1"
pydantic-extra-types = "==2.10.3"
pydantic-settings = "==2.8.1"
Pygments = "==2.19.1"
python-dotenv = "==1.1.0"
python-multipart = "==0.0.20"
PyYAML = "==6.0.2"
rich = "==14.0.0"
rich-toolkit = "==0.14.1"
ruff = "==0.11.8"
shellingham = "==1.5.4"
sniffio = "==1.3.1"
SQLAlchemy = "==2.0.40"
starlette = "==0.46.1"
typer = "==0.15.2"
typing_extensions = "==4.13.1"
typing-inspection = "==0.4.0"
ujson = "==5.10.0"
uvicorn = "==0.34.0"
watchfiles = "==1.0.4"
websockets = "==15.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py39"

line-length = 79

select = [
    "E",
    "W",
    "F",  
    "I", 
    "N", 
    "C", 
    "B",  
    "A", 
    "COM", 
    "DTZ", 
    "T10",
    "T20",
    "S",
    "G",
    "RUF",
]

exclude = ["app/migrations", 
            ".venv"]

ignore = [
    "B017",
    "S101",
    "S106",
    "G004",
    "RUF002",
    "RUF012",

    "W291", 
    "W292",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "cr-lf"